# src/modules/categories/schema/category.ts
@@ -1,0 +1,9 @@
+import { z } from "zod";
+
+export const getCategoryQuerySchema = z.object({
+  nested: z
+    .string()
+    .optional()
+    .transform((val) => val === "true"),
+  parentId: z.string().uuid().optional(),
+});
